chart/templates/bird-app/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: bird-app-service
spec:
 selector:
   app: bird-app
 ports:
   - protocol: TCP
     port: 8080
     targetPort: 8080
