chart/templates/bird-app/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bird-route

spec:
  hosts:
    - "birdapp.com"
  gateways:
    - bird-gateway
  http:
    - route:
        - destination:
            host: bird-app-service.birdpedia.svc.cluster.local
            port:
              number: 8080
